feat: new class Orientation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ include_directories(.)
 
 add_executable(magic_cube2
         angle.cpp
-        position.cpp)
+        position.cpp
+        orientation.cpp
+        orientation.h)
