feat: new class ColoredCubelet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,7 @@ add_executable(magic_cube2
         cubelet.cpp
         cubelet.h
         cubelet_face.cpp
-        cubelet_face.h)
+        cubelet_face.h
+        color.h
+        colored_cubelet.cpp
+        colored_cubelet.h)
