feat: new class Face; add face.print()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,6 @@ add_executable(magic_cube2
         cube.cpp
         cube.h
         layer.cpp
-        layer.h)
+        layer.h
+        face.cpp
+        face.h)
